--- a/src/documents/styles/modules/article.css.less
+++ b/src/documents/styles/modules/article.css.less
@@ -902,6 +902,12 @@ body.article, body.animating {
 	}
 }
 
+#disqus_thread {
+	max-width: 800px;
+	padding: 10px;
+	margin: 0 auto;
+}
+
 .video-wrapper {
 	height: 0;
 	padding-bottom: 56.27%;
