--- a/src/files/jobvite/style.css
+++ b/src/files/jobvite/style.css
@@ -5,5 +5,6 @@
  URL : http://jobvite.com
 
  Last Updated : August 25th, 2014
+ Touch: December 17th, 2014
 
 - - - - - - - - - - - - - - - - - - - - - */
