--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -12,6 +12,7 @@
 			</div>
 			<div class="contact-info">
 				<span class="in-touch">Get In Touch</span>
+				<span class="welcome-feedback">We Welcome Feedback</span>
 				<div class="email-us">
 					<span>e-mail us</span>
 					<p><a href="mailto:hello@myplanet.io">hello@myplanet.io</a></p>
@@ -65,7 +66,7 @@
 			</div>
 		</div>
 		<div class="privacy">
-			&copy; 2014 Myplanet Internet Solutions Ltd. All Rights Reserved. <a href="/privacy/">Privacy Policy</a>
+			&copy; 2014 Myplanet Internet Solutions Ltd. All Rights Reserved. <a href="/privacy/">Privacy Policy</a> | <a href="/article/isar-policies/">Accessibility Policy</a>
 		</div>
 	</div>
 </footer>
