--- a/src/documents/styles/modules/footer.css.less
+++ b/src/documents/styles/modules/footer.css.less
@@ -80,6 +80,11 @@
 					font-size:36px;
 					margin-left:-3px;
 				}
+				
+				&.welcome-feedback {
+					font-size: 15px;
+					margin: 10px 0 -15px -5px;
+				}
 			}
 			.email-us, .call-us {
 				@media screen and (max-width: 1200px) {
