--- a/src/documents/styles/modules/footer.css.less
+++ b/src/documents/styles/modules/footer.css.less
@@ -83,7 +83,7 @@
 				
 				&.welcome-feedback {
 					font-size: 15px;
-					margin: 10px 0 -15px -2px;
+					margin: 1px 0 0 -1px;
 				}
 			}
 			.email-us, .call-us {
