--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -66,7 +66,7 @@
 			</div>
 		</div>
 		<div class="privacy">
-			&copy; 2014 Myplanet Internet Solutions Ltd. All Rights Reserved. <a href="/privacy/">Privacy Policy</a> | <a href="/article/isar-policies/">Accessibility Policy</a>
+			&copy; 2014 Myplanet Internet Solutions Ltd. All Rights Reserved. <a href="/privacy/">Privacy Policy</a> | <a href="/article/iasr-policies/">Accessibility Policy</a>
 		</div>
 	</div>
 </footer>
