--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -15,7 +15,7 @@
 				<span class="welcome-feedback">We Welcome Feedback</span>
 				<div class="email-us">
 					<span>e-mail us</span>
-					<p><a href="mailto:hello@myplanet.io">hello@myplanet.io</a></p>
+					<p><a href="mailto:hello@myplanet.com">hello@myplanet.com</a></p>
 				</div>
 				<div class="call-us">
 					<span>call us</span>
@@ -66,7 +66,7 @@
 			</div>
 		</div>
 		<div class="privacy">
-			&copy; 2014 Myplanet Internet Solutions Ltd. All Rights Reserved. <a href="/privacy/">Privacy Policy</a> | <a href="/article/iasr-policies/">Accessibility Policy</a>
+			&copy; 2015 Myplanet Internet Solutions Ltd. All Rights Reserved. <a href="/privacy/">Privacy Policy</a> | <a href="/article/iasr-policies/">Accessibility Policy</a>
 		</div>
 	</div>
 </footer>
