fix linkedin url

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -27,7 +27,7 @@
 				<li><a class="facebook" href="http://www.facebook.com/myplanetHQ" target="_blank">Facebook</a></li>
 				<li><a class="dribbble" href="http://dribbble.com/myplanet" target="_blank">Dribbble</a></li>
 				<li><a class="drupal" href="http://drupal.org/node/1121200" target="_blank">Drupal</a></li>
-				<li><a class="linkedin" href="http:/linkedin.myplanet.com" target="_blank">Linkedin</a></li>
+				<li><a class="linkedin" href="http://linkedin.myplanet.com" target="_blank">Linkedin</a></li>
 			</ul>
 		</div>
 		<div class="block addresses">
