--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -8,7 +8,7 @@
 					<span class="locality">Toronto</span>,<span class="region">Ontario</span>, <span class="country">Canada</span>
 				</div>
 				<p class="tel">1-866-232-7456</p>
-				<a href="http://myplanet.io" class="url">Myplanet</a>
+				<a href="http://www.myplanet.com" class="url">Myplanet</a>
 			</div>
 			<div class="contact-info">
 				<span class="in-touch">Get In Touch</span>
