--- a/src/documents/styles/variables.less
+++ b/src/documents/styles/variables.less
@@ -13,7 +13,7 @@
 @design-color: #e146fc;
 @development-color: #84c600;
 @business-color:  #0085ff;
-@mpd-orange: #f05a28;
+@mpd-orange: #ed5b33;
 @purple: #5f5ca9;
 @green: #58c0a2;
 @pink: #ea3d67;
