--- a/src/documents/styles/modules/article.css.less
+++ b/src/documents/styles/modules/article.css.less
@@ -3,20 +3,18 @@
 
 #article-inner.reveal {
 	.article-banner {
-		opacity: 1;
+		opacity: 0.999;
 		.transition(opacity 0.5s);
 		.translate3d(0,0,0);
 	}
 	.article-title {
-		opacity: 1;
+		opacity: 0.999;
 		.translate3d(0,0,0);
-		.showBack();
 		.transition-transform(0.8s ease 0.15s, opacity 0.8s ease 0.15s);
 	}
 	.article-body {
-		opacity: 1;
+		opacity: 0.999;
 		.translate3d(0,0,0);
-		.showBack();
 		.transition-transform(0.6s ease 0.3s, opacity 0.6s ease 0.3s);
 	}
 
@@ -28,13 +26,14 @@
 			.transition-transform(0.5s ease 0.1s, opacity 0.55s ease 0.1s);
 		}
 		.article-body {
-		.transition-transform(0.3s ease 0.22s, opacity 0.4s ease 0.22s);
+			.transition-transform(0.4s ease 0.2s, opacity 0.45s ease 0.2s);
 		}
 	}
 
 	&.revealed {
 		.article-banner, .article-title, .article-body {
 			.showBack();
+			opacity:1;
 			.transform(none);
 		}
 	}
@@ -90,9 +89,11 @@ body.article, body.animating {
 				font-weight: bold;
 				letter-spacing: -2px;
 				display: inline-block;
-				padding: 20px 30px 8px;
+				padding: 14px 30px;
 				color: white;
-				background: black;
+				white-space: nowrap;
+
+				background: #1a1a1a;
 				&:last-of-type {
 					padding-bottom: 20px;
 				}
@@ -128,7 +129,7 @@ body.article, body.animating {
 		}
 		@media screen and (max-width: 320px) {
 			h1 {
-				font-size: 3em;
+				font-size: 2.8em;
 			}
 		}
 	}
@@ -288,7 +289,7 @@ body.article, body.animating {
 				margin-bottom: 33px;
 				padding: 0 80px;
 				font: 2.2em/1.5 Plantin;
-				letter-spacing: -0.01em;
+				letter-spacing: -0.001em;
 				.border-box();
 
 				@media screen and (max-width: 1024px) {
@@ -410,7 +411,7 @@ body.article, body.animating {
 				padding: 0 80px;
 				font: 2.8em/1.3 "Plantin";
 				font-weight: bold;
-				letter-spacing: -0.01em;
+				letter-spacing: -0.001em;
 				.border-box();
 			}
 			h3 {
@@ -605,7 +606,7 @@ body.article, body.animating {
 					font-family: TradeGothic;
 					font-size: 1.8em;
 					line-height: 1.6;
-					letter-spacing: -0.01em;
+					letter-spacing: -0.001em;
 				}
 
 				@media screen and (max-width: 1024px) {
@@ -717,7 +718,7 @@ body.article, body.animating {
 		    > h2 {
 		        font-size: 2em;
 		        font-style: italic;
-		        letter-spacing: 0.01em;
+		        letter-spacing: 0.001em;
 		        padding: 0;
 		        margin: 0 0 25px 0;
 		    }
@@ -733,7 +734,7 @@ body.article, body.animating {
 	            padding-bottom: 12px;
 	            font-family: TradeGothic;
 	            font-size: 1.8em;
-	            letter-spacing: -0.01em;
+	            letter-spacing: -0.001em;
 	            border-left: 3px solid white;
 
 	            &:before {
