--- a/src/documents/styles/shell.less
+++ b/src/documents/styles/shell.less
@@ -13,14 +13,21 @@ a, a:focus, a:active{
 }
 
 body {
-	&.scrolling, &.scrolling *, &.animating, &.animating * {
+	&.scrolling #viewport, &.scrolling  #viewport *, &.animating  #viewport, &.animating  #viewport * {
 		pointer-events:none !important;
 	}
 	background: #444;
 
-	&.loaded #viewport {
-		#main, #article {
-			.transition-transform(@article-transition-time);
+	&.loaded {
+		#viewport {
+			#main, #article {
+				.transition-transform(@article-transition-time);
+			}
+		}
+		#banner {
+			.transition-transform(@article-transition-time, background 0.5s);
+			.transform(translate3d(0,0,0));
+			.hideBack();
 		}
 	}
 }
@@ -35,32 +42,28 @@ body {
 	background: #ebebeb;
 
 	[data-role="menu-ghost"] {
+	  display:none;
 	  top: 0;
 	  width: 100%;
 	  height:75px;
 	  position: fixed;
-	  //.translateZ();
-	  z-index:2;
+	  .translateZ();
+	  z-index:0;
 	}
 
 	@media only screen and (max-width: 767px) {
 	  [data-role="menu-ghost"] {
-	  	width: auto;
+	  	//width: auto;
 	  	left: 0;
 	  	right: 105px;
-	    height: 62px;
+	    height: 62px !important;
 	  }
 	}
-	@media screen and (min-width: 1140px) {
+	@media screen and (min-width: 1175px) {
 	  [data-role="menu-ghost"] {
 	    height: 145px;	  }
 	  #menu {
 	    margin-left: 0px;
-	  }
-	}
-	@media screen and (max-width: 1139px) {
-	  #menu {
-	    z-index: 5;
 	  }
 	}
 }
@@ -74,8 +77,8 @@ body {
 
 	#main, #article {
 		.border-box();
-		//.transform(translate3d(0,0,0));//-1px, 0, 0));
-		//.hideBack();
+		.hideBack();
+		opacity:0.999;
 		//.transition-transform(@article-transition-time);// ease-in-out);
 		white-space:normal;
 		vertical-align: top;
@@ -85,16 +88,35 @@ body {
 		width:100%;
 		position:relative;
 		padding:0;
-		//margin-left:1px;
-		@media screen and (min-width: 1024px) {
-			padding: inherit 0;
-		}
 
 		> .main-wrap {
 			max-width:@max-width;
 			margin:-38px auto @footer-height;
 			min-height:100%;
 		}
+	}
+
+	#article {
+		.transform(translate3d(-1px,0,0));//-1px, 0, 0));
+	}
+
+	#main {
+		.transform(translate3d(0,0,0));
+		margin-top:557px;
+		background: #ebebeb;
+		z-index:1;
+		@media only screen and (max-width :1174px) {
+	        margin-top: 420px;
+	    }
+	    @media only screen and (max-width :900px) {
+	        margin-top: 330px;
+	    }
+	    @media only screen and (max-width :767px) {
+	        margin-top: 297px;
+	    }
+	    @media only screen and (max-width :600px) {
+	        margin-top: 282px;
+	    }
 	}
 
 	@media screen and (max-width: 1174px) {
@@ -123,7 +145,7 @@ body {
 		display: none;
 		position: absolute;
 		width: 100%;
-		height: 100%;
+		height: 200%;
 		top: 0;
 		left: 0;
 		background: #f0f0f0;
@@ -141,11 +163,21 @@ body {
 			.border-radius(61px);
 		}
 	}
+	.loading-overlay-tiles {
+		top:-557px;
+		@media only screen and (max-width :1174px) {
+	        top: -360px;
+	    }
+	    @media only screen and (max-width :900px) {
+	        top: -290px;
+	    }
+	}
 }
 
 body.article {
-	#viewport #main, #viewport #article {
-		.translate3d( -100%,0,0);
+	#viewport #main, #viewport #article, #banner {
+		//.translate3d(~"calc(-100% + 1px)",0,0);
+		.translate3d(-100%,0,0);
 	}
 }
 
@@ -160,7 +192,7 @@ body.article {
 	.user-select();
 	top:29px;
 	left:50%;
-	z-index:3;
+	z-index:4;
 	margin-left:-(@max-width/2 + @logo-width + @logo-gutter-width);
 	@media only screen and (max-width : 1324px) {
 		left:@logo-gutter-width;
@@ -179,45 +211,53 @@ body.article {
 
 body {
 	#back {
-		height: 80px;
-		width: 80px;
-		font-size:0;
-		background:url('../images/spritempd.png') no-repeat 0 -284px;
-		background-size:434px auto;
+		width: 124px;
+		height: 125px;
+		font-size: 0;
+		background: url('../images/spritempd.png') no-repeat  -136px -414px;
+		background-size: 490px auto;
 		position: fixed;
-		.translateZ();
+		.transform(translate3d(20px,-52px,0) scale(0.45));
 		.user-select();
 		z-index:3;
 		top:33px;
 		right: 50%;
-		margin-right:-(@max-width/2 + @logo-width + @logo-gutter-width);
+		margin-right:-550px;
 		opacity: 0;
 		pointer-events: none;
-		.transition-transform(@transition-time, opacity 0.7s);
+		.transition-transform(0.4s ease, opacity 0.7s);
 		&.reveal {
-			opacity: 0.99;
-			.transition-transform(@transition-time, opacity 0.7s);
+			opacity: 0.999;
+			a.light:after {
+				opacity:0.999;
+			}
+		}
+		&.hover {
+			.transform(translate3d(20px, -52px, 0) scale(.51));
 		}
 		a {
 			height: 100%;
 			width: 100%;
 			text-decoration: none;
 			display: inline-block;
+			@media only screen and (min-width :  1174px) {
+				&:after {
+					content: '';
+					background: url('../images/spritempd.png') no-repeat -264px -425px;
+					background-size:500px auto;
+					opacity:0.001;
+					position:absolute;
+					top:0;
+					bottom:0;
+					left:0;
+					right:0;
+					.transform(translateZ(0));
+					.transition(opacity 0.4s);
+				}
+			}
 		}
-		@media only screen and (max-width : 1324px) {
-			right:@logo-gutter-width;
-			margin-right:0;
-		}
+
 		@media only screen and (max-width :  1174px) {
-			top: 10px;
-			right: 74px;
-			width: 52px;
-			height: 52px;
-			margin-right: 0;
-			background-size: 300px;
-			background-position: 0px -196px;
-		}
-		@media only screen and (max-width : 767px) {
 			top: 8px;
 			right: 61px;
 			width: 44px;
@@ -225,6 +265,7 @@ body {
 			margin-right: 0;
 			background-size: 250px;
 			background-position: -211px -170px;
+			.translateZ();
 		}
 	}
 	&.article {
@@ -294,9 +335,7 @@ body {
 }
 
 .footer {
-	position: relative;
 	margin:0;
-	z-index: 1;
 }
 
 a[href^=tel]{
@@ -307,20 +346,20 @@ a[href^=tel]{
 @media only screen and (max-width :1174px) {
 	body {
 		background: #f0f0f0;
-		&.loaded #viewport {
-			#main, #article {
+		&.loaded  {
+			#viewport #main, #viewport #article, #banner {
 				.transition-transform(@transition-time);
 			}
 		}
 		&.desktop-capable {
 			#logo:hover {
-				background-position: 0px -132px;
+				background-position: 0px -133px;
 			}
 		}
 	}
 	#viewport {
 		#main, #article {
-			padding-top:@ipad-menu-height;
+			//padding-top:@ipad-menu-height;
 			> .main-wrap {
 				margin-top: 10px;
 			}
@@ -335,7 +374,7 @@ a[href^=tel]{
 		left: 20px;
 		height: 90px;
 		width: 90px;
-		background-size: 482px auto;
+		background-size: 481px auto;
 		background-position: 0 -40px;
 	}
 	#logo, #menu, #menu-toggle, #back {
@@ -344,10 +383,12 @@ a[href^=tel]{
 	}
 
 	#menu {
+		//left: ~"calc(100% - 1px)";
 		left:100%;
 		height:100%;
 		width:251px;
 		pointer-events:auto;
+		.transition-transform(@transition-time, opacity 0 (@transition-time + 0.1s));
 		// margin-left:-1px;
 		// border:1px solid #fff;
 		// margin-top:-1px;
@@ -356,19 +397,14 @@ a[href^=tel]{
 	#menu, #menu-toggle {
 		pointer-events:auto;
 	}
-	#wrap:before {
-		content:'';
-		.translateZ();
-		.user-select();
-		position:fixed;
-		top:0;
-		left:0;
+	#wrap [data-role="menu-ghost"] {
 		height:@ipad-menu-height;
+		display:block;
 		width:100%;
 		background:#fff;
-		//border-bottom:1px solid #cecece;
-		box-shadow: 0 1px 2px rgba(0, 0, 0, 0.125); //4px -1px 13px #ddd;
-		z-index:2;
+		z-index:1;
+		border-bottom:1px solid #cecece;
+	//	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.125); //4px -1px 13px #ddd;
 	}
 	#article-cover-photo {
 		top:@mobile-menu-height;
@@ -376,12 +412,15 @@ a[href^=tel]{
 	body.menu {
 		pointer-events:none;
 		.user-select();
-
-		#logo, #viewport, #menu, #menu-toggle, #back {
+		#logo, #viewport, #menu, #menu-toggle, #banner, #back {
 			.translate3d(-249px,0,0);
 		}
+		#menu {
+			.transition-transform(@transition-time);
+			opacity:0.999;
+		}
 		#back {
-			opacity: 0.01;
+			opacity: 0.001;
 			.transition-transform(@transition-time, opacity @transition-time);
 		}
 	}
@@ -402,12 +441,12 @@ a[href^=tel]{
 			}
 		}
 	}
-	#wrap:before {
+	[data-role="menu-ghost"] {
 		height:@mobile-menu-height;
 	}
 	#viewport {
 		#main, #article {
-			padding-top:@mobile-menu-height;
+			//padding-top:@mobile-menu-height;
 
 			> .main-wrap {
 				margin-top: 10px;
