--- a/src/documents/styles/modules/banner.css.less
+++ b/src/documents/styles/modules/banner.css.less
@@ -216,10 +216,11 @@
                     font-size:16px;
                 }
             }
-            @media screen and (max-width: 420px) {
+            @media screen and (max-width: 720px) {
                 width: 100%;
                 text-align: center;
-
+            }
+            @media screen and (max-width: 420px) {
                 .button {
                     font-size:15px;
                     line-height: 1;
