--- a/src/documents/styles/modules/menu.css.less
+++ b/src/documents/styles/modules/menu.css.less
@@ -275,6 +275,14 @@
 	display:none;
 }
 @media only screen and (min-width: 1175px) {
+	body.safari {
+		#menu ul > li  {
+			top:-57px;
+		}
+		#menu ul > li.home  {
+			top:-113px;
+		}
+	}
 	#menu  {
 	//	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.13); //4px -1px 13px #ddd;
 	}
