add glassdoor to footer

--- a/src/documents/styles/modules/footer.css.less
+++ b/src/documents/styles/modules/footer.css.less
@@ -81,7 +81,7 @@
 					font-size:36px;
 					margin-left:-3px;
 				}
-				
+
 				&.welcome-feedback {
 					font-size: 15px;
 					margin: 1px 0 0 -1px;
@@ -177,6 +177,12 @@
 						background-position: -253px -224px;
 						&:after {
 							background-position: -253px -248px;
+						}
+					}
+					&.glassdoor {
+						background-position: -291px -223px;
+						&:after {
+							background-position: -291px -247px;
 						}
 					}
 				}
