--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -23,11 +23,12 @@
 				</div>
 			</div>
 			<ul class="social-media-footer">
-				<li><a class="twitter" href="http://twitter.com/myplanetHQ" target="_blank">Twitter</a></li>
-				<li><a class="facebook" href="http://www.facebook.com/myplanetHQ" target="_blank">Facebook</a></li>
-				<li><a class="dribbble" href="http://dribbble.com/myplanet" target="_blank">Dribbble</a></li>
-				<li><a class="drupal" href="http://drupal.org/node/1121200" target="_blank">Drupal</a></li>
-				<li><a class="linkedin" href="http://linkedin.myplanet.com" target="_blank">Linkedin</a></li>
+				<li><a title="Twitter" class="twitter" href="http://twitter.com/myplanetHQ" target="_blank">Twitter</a></li>
+				<li><a  title="Facebook" class="facebook" href="http://www.facebook.com/myplanetHQ" target="_blank">Facebook</a></li>
+				<li><a  title="Dribble" class="dribbble" href="http://dribbble.com/myplanet" target="_blank">Dribbble</a></li>
+				<li><a  title="Drupal" class="drupal" href="http://drupal.org/node/1121200" target="_blank">Drupal</a></li>
+				<li><a  title="LinkedIn" class="linkedin" href="http://linkedin.myplanet.com" target="_blank">Linkedin</a></li>
+				<li><a  title="Glassdoor" class="glassdoor" href="http://glassdoor.myplanet.com" target="_blank">Glassdoor</a></li>
 			</ul>
 		</div>
 		<div class="block addresses">
