--- a/src/documents/styles/modules/landing.css.less
+++ b/src/documents/styles/modules/landing.css.less
@@ -416,6 +416,7 @@
 		  .translateZ();
 
 		  .info {
+		  	position:relative;
 		    display: inline-block;
 		    vertical-align: top;
 		    width: 33.3%;
