--- a/src/documents/styles/modules/menu.css.less
+++ b/src/documents/styles/modules/menu.css.less
@@ -326,6 +326,9 @@
 		-moz-transform-origin:0 0;
 		transform-origin:0 0;
 	}
+	body.ie [data-role="menu-indicator"] {
+		top:75px;
+	}
 	#menu {
 		ul:after {
 			content:'';
