--- a/src/documents/styles/site-ie8.css.less
+++ b/src/documents/styles/site-ie8.css.less
@@ -144,7 +144,7 @@ body.width-mobile #logo {
 }
 
 body.article #viewport {
-  margin-top: 100px;
+  margin-top: 137px;
 }
 
 
@@ -573,6 +573,13 @@ body.width-mobile #menu ul > li {
 
 body.article #main {
   padding-bottom: 0px;
+}
+body.article #banner {
+  display:none;
+}
+
+body.article #menu {
+  background:#000;
 }
 
 .footer {
