--- a/src/documents/styles/modules/menu.css.less
+++ b/src/documents/styles/modules/menu.css.less
@@ -60,7 +60,7 @@
 						}
 					}
 					&.contact, &.careers {
-						left:40px;
+						left:50px;
 					}
 				}
 			}
@@ -240,9 +240,15 @@
 						background-size:490px auto;
 						.transform(translate3d(0, 94px, 0) scale(0.58));
 					}
-					&:after {
+					/*&:after {
 						background-position:0 -37px;
 					}
+					&:after {
+						background: url('../images/spritempd.png') no-repeat 0 -243px;
+						background-size: 434px auto;
+						display:block !important;
+						opacity:1 !important;
+					}*/
 				}
 
 				&.hover a {
