--- a/src/documents/styles/modules/landing.css.less
+++ b/src/documents/styles/modules/landing.css.less
@@ -279,6 +279,7 @@
 		  background: #ffffff;
 		  position: relative;
 		  padding-bottom:100px;
+		  height:220px;
 		  font-family: "Plantin", serif;
 		 &:before {
 	        content: '\201C';
@@ -296,14 +297,15 @@
 	      }
 		  .rotator-nav {
 		  	position:absolute;
+		  	z-index: 1;
 		  	white-space:nowrap;
 		  	padding:0;
 		  	bottom:40px;
 		  	left:0;
 	  	  	width: 100%;
  		 	text-align: center;
+ 		 	.user-select();
 		  	> li {
-		  		.user-select();
 		  		cursor:pointer;
 		  		list-style:none;
 		  		display:inline-block;
