--- a/src/documents/styles/modules/landing.css.less
+++ b/src/documents/styles/modules/landing.css.less
@@ -279,7 +279,6 @@
 		  background: #ffffff;
 		  position: relative;
 		  padding-bottom:100px;
-		  height:220px;
 		  font-family: "Plantin", serif;
 		 &:before {
 	        content: '\201C';
@@ -308,7 +307,7 @@
 		  	> li {
 		  		cursor:pointer;
 		  		list-style:none;
-		  		display:inline-block;
+				display:inline-block;
 		  		height:11px;
 		  		width:11px;
 		  		border-radius:11px;
@@ -377,9 +376,11 @@
 		  .client-quote {
 		    text-align: center;
 		    opacity:0;
+		    display:none;
 		    .transition(opacity 0.7s linear);
 		    &:nth-child(1) {
 		    	opacity:1;
+		    	display:block;
 		    }
 
 		    @media screen and (max-width: 720px) {
