--- a/src/documents/styles/modules/landing.css.less
+++ b/src/documents/styles/modules/landing.css.less
@@ -378,7 +378,7 @@
 		    opacity:0;
 		    display:none;
 		    .transition(opacity 0.7s linear);
-		    &:nth-child(1) {
+		    &:first-child {
 		    	opacity:1;
 		    	display:block;
 		    }
