attempt at IOS hover improvement

--- a/src/documents/styles/modules/landing.css.less
+++ b/src/documents/styles/modules/landing.css.less
@@ -350,7 +350,7 @@
 						  border-left: 0;
 					}
 					&:hover {
-						border-right: 12px solid #ed5b33;
+						border-right-color:;#ed5b33;
 					}
 		  		}
 		  		&[data-index="next"] {
@@ -368,7 +368,7 @@
 					}
 					&:hover {
 						border-right:0;
-						border-left: 12px solid #ed5b33;
+						border-left-color:#ed5b33;
 					}
 		  		}
 		  	}
