--- a/src/documents/styles/modules/landing.css.less
+++ b/src/documents/styles/modules/landing.css.less
@@ -350,7 +350,7 @@
 						  border-left: 0;
 					}
 					&:hover {
-						border-right-color:;#ed5b33;
+						border-right-color:#ed5b33;
 					}
 		  		}
 		  		&[data-index="next"] {
