Added new footer
consists of:
- new sprite generation mechanism (added sprites task to default Grunt task)
- .editorconfig for editing coffeescript files
- Source file for doodle artwork (Sketch file)
- Updated README.md to reflect Node ENV requirements

Notes:
- commented out responsive mixin (Docpad version of less is too old)

--- a/src/documents/styles/main.css.less
+++ b/src/documents/styles/main.css.less
@@ -1,5 +1,6 @@
 @import "variables.less";
 @import "mixins.less";
+@import "generated/sprites.less";
 @import "prism.less";
 @import "shell.less";
 @import "site.css.less";
@@ -12,3 +13,4 @@
 @import "modules/navlinks.css.less";
 @import "modules/four-oh-four.css.less";
 @import "modules/landing.css.less";
+@import "sheedy.less";
