--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer" id="contact">
+<!-- <footer class="footer" id="contact">
 	<div class="inner">
 		<div class="block">
 			<div class="vcard">
@@ -71,3 +71,55 @@
 		</div>
 	</div>
 </footer>
+ -->
+
+ <div class="footer">
+
+   <div class="inner">
+
+     <div class="block addresses">
+
+       <h4>Get in touch</h4>
+
+       <div class="phone">
+         <h5>Call us</h5>
+         <span>1-866-232-7456</span>
+         <h5>Email us</h5>
+         <span><a href="mailto:hello@myplanet.com">hello@myplanet.com</a></span>
+       </div>
+       <div class="address-wrap">
+         <div class="address toronto">
+           <h5>Toronto</h5>
+           <span><a data-long-lat="43.65163,-79.37104" href="http://maps.google.com/?q=252 Adelaide St E, Toronto, ON, Canada" target="_blank">252 Adelaide St East<br/> Toronto, Ontario<br/> M5A 1N1</a></span>
+         </div>
+         <div class="address vancouver">
+           <h5>Vancouver</h5>
+           <span><a data-long-lat="49.28411,-123.11223" href="http://maps.google.com/?q=312-510 West Hastings, Vancouver, BC, Canada" target="_blank">312-510 West Hastings<br/> Vancouver, BC<br/> V6B 1L8</a></span>
+         </div>
+         <div class="address chernihiv">
+           <h5>Chernihiv</h5>
+           <span><a data-long-lat="51.497299,31.311979" href="http://maps.google.com/?q=21a Voiniv-Internatsionalistiv St, Chernihiv, Ukraine" target="_blank">21a Voiniv-<br/> Internatsionalistiv St<br/>Chernihiv, Ukraine</a></span>
+         </div>
+         <div class="address chicago">
+           <h5>Chicago</h5>
+           <span><a data-long-lat="41.881567,-87.633187" href="http://maps.google.com/?q=155 North Wacker Dr. Chicago, IL" target="_blank">155 North Wacker Dr.<br/> Suite 4250<br/> Chicago, IL 60606</a></span>
+         </div>
+       </div>
+
+     </div>
+
+     <ul class="social-links">
+       <li class="twitter"><a href="http://twitter.com/myplanetHQ">twitter</a></li>
+       <li class="facebook"><a href="http://www.facebook.com/myplanetHQ">facebook</a></li>
+       <li class="dribbble"><a href="http://dribbble.com/myplanet">dribbble</a></li>
+       <li class="drupal"><a href="http://drupal.org/node/1121200">drupal</a></li>
+       <li class="glassdoor"><a href="http://glassdoor.myplanet.com/">glassdoor</a></li>
+       <li class="linkedin"><a href="http://linkedin.myplanet.com/">linkedin</a></li>
+     </ul>
+
+     <div class="privacy">
+       &copy; 2015 Myplanet Internet Solutions Ltd. All Rights Reserved. 252 Adelaide St E, Toronto, Ontario M5A 1N1 <span><a href="/article/iasr-policies/">Our commitment to accessibility</a> &bull; <a href="/privacy/">About your privacy</a> &bull; <a href="">We welcome feedback</a></span>
+     </div>
+
+   </div>
+ </div>
