--- a/src/documents/styles/modules/banner.css.less
+++ b/src/documents/styles/modules/banner.css.less
@@ -20,7 +20,7 @@
     &.work {
         background: @mpd-orange;
     }
-    &.careers {
+    &.labs {
         background: @mpd-orange;
     }
     &.design {
